[gd_scene load_steps=3 format=3 uid="uid://87q8li4mp586"]

[ext_resource type="AudioStream" uid="uid://cn3mvv7rftbo0" path="res://Audio/Venus.wav" id="1_236qy"]
[ext_resource type="Script" path="res://Scripts/Conductor.gd" id="2_uwlb1"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D"]
stream = ExtResource("1_236qy")
script = ExtResource("2_uwlb1")

[node name="StartTimer" type="Timer" parent="."]

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
